--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ html {
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
-  color: #fff;
+  color: #FFFFFF;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
@@ -37,7 +37,6 @@ ol {
   list-style: none;
 }
 
-/* Кастомный скроллбар */
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
 }
@@ -48,4 +47,301 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  color: #FFFFFF;
+  background-color: #1b1919;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  grid-template-areas: 'result content-details';
+  column-gap: 30px;
+}
+
+.result {
+  grid-area: result;
+  align-self: end;
+  justify-self: end;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.search-form__fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', Arial, sans-serif;
+}
+
+.search-form__label {
+  display: flex;
+  width: fit-content;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  cursor: pointer;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__textfield {
+  appearance: none;
+  width: 225px;
+  border: none;
+  border-top: 1px solid #FFFFFF;
+  border-bottom: 1px solid #FFFFFF;
+  background-color: transparent;
+  color: #FFFFFF;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+.search-form__textfield:active {
+  border-top: none; 
+  border-bottom: none; 
+  outline: 1px solid #FFFFFF; 
+}
+
+.search-form__textfield:focus {
+  outline: none; 
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #FFFFFF; 
+  outline-offset: 1px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.search-form__checkbox {
+  display: flex;
+  gap: 5px; 
+  align-items: center;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center; 
+  position: relative;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #FFFFFF;
+  background-color: transparent;
+}
+
+.search-form__pseudo-checkbox::after {
+  opacity: 0;  
+  content: '';
+  width: 14px;
+  height: 14px;
+  cursor: pointer;
+  background-color: #FFFFFF;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__label:has(.search-form__checkbox:focus-visible) {
+  outline: 1px solid #FFFFFF; 
+  outline-offset: 1px;
+}
+
+.search-form__label-text {
+  margin-left: 5px;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
+  font-size: 18px;
+}
+
+.button {
+  font-family: Fira Sans Condensed, Arial, sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: #FFFFFF;
+  height: 34px;
+  cursor: pointer;
+  border: 1px solid #FFFFFF;
+  outline: none;
+  background-color: transparent;
+}
+
+.search-form__submit-button {
+  width: 194px;
+}
+
+.more-button {
+  width: 100%;
+  margin-top: 34px;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #FFFFFF;
+  outline-offset: 1px;
+}
+
+.content__details {
+  grid-area: content-details;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  font-family: Oswald, Arial, sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list-container {
+  position: relative;
+  height: 298px;
+  overflow-y: auto;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+
+.content__list-item {
+  padding-inline: 3px;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.content__card-link:hover {
+  text-decoration: underline 2px #FFFFFF;
+  cursor: pointer;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #FFFFFF;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: start;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+}
+
+.content__video-card-title {
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #fff;
+
+  font-size: 30px;
+  font-weight: 700;
+  max-width: 196px;
+  overflow: hidden; 
+  white-space: nowrap; 
+  text-overflow: ellipsis;
+  font-family: Oswald, Arial, sans-serif;
+}
+
+.content__video-card-description {
+  -webkit-line-clamp: 4;
+  display: -webkit-box;
+  -webkit-box-orient: vertical; 
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  font-family: Fira Sans Condensed, Arial, sans-serif;
+  font-size: 18px;
+  line-height: 1.6;
+  color: #fff;
+}
+
+.content__video-card-thumbnail {
+  width: 193px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
 }
